# runeGard

./: .gitignore
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routes/: projects.py  requests.py  testimonials.py  users.py
backend/core/: auth.py  config.py  controller.py  logging_config.py  middleware.py  utils.py
backend/db/: mongo.py
backend/db/crud/: projects.py  requests.py  testimonials.py  users.py
backend/models/: project.py  request.py  shared.py  testimonial.py  user.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: AuthWrapper.tsx  RequireUserInit.tsx  UserInitForm.tsx
frontend/src/components/dashboard/: DashboardHeader.tsx  MyProjectsList.tsx  MyRequestsList.tsx  MyStatsCard.tsx  MyTestimonialsList.tsx  index.ts
frontend/src/components/forms/: TeammateRequestForm.tsx  TestimonialForm.tsx
frontend/src/components/landing/: FAQSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  RulesSection.tsx  WhatsInStore.tsx  index.ts
frontend/src/components/profile/: PublicProfile.tsx  TestimonialSection.tsx  UserProjectsGrid.tsx  index.ts
frontend/src/data/: bgText.tsx  faqs.ts  features.ts  rules.ts
frontend/src/lib/: README.md  index.ts
frontend/src/pages/: AuthCallback.tsx  CreateProject.tsx  Dashboard.tsx  EditProject.tsx  Explore.tsx  LandingPage.tsx  Profile.tsx  ProjectDetail.tsx  PublicProfile.tsx  index.ts
(+74 files in other folders)
